use default page size if not provided in request, mark qf as mandatory param, improved error message #EA-4236